# mlinterpy

./: CMakeLists.txt  README.md  pyproject.toml  setup.py
.github/workflows/: test.yaml
mlinterp/: CMakeLists.txt  __init__.py  _mlinterp.pyx  mlinterp.hpp  mlinterp_c_api.cpp
mlinterpy/: CMakeLists.txt  __init__.py  _mlinterpy.pyx  _rgi.py  _rgi_cython.pyx  driver.py  jit.py  mlinterp.hpp  mlinterp_c_api.cpp
test/: test.py  test_numpy_interp2d.py
